# internal/rest/controllers/organization.go
@@ -3,7 +3,6 @@ package controllers
 import (
 	"matchlog/internal/rest/handlers"
 	"matchlog/internal/rest/helpers"
-	"matchlog/internal/user"
 	"net/http"
 
 	"github.com/labstack/echo/v4"
@@ -34,22 +33,9 @@ func (h *Handlers) CreateOrganization(c handlers.AuthenticatedContext) error {
 }
 
 func (h *Handlers) DeleteOrganization(c handlers.AuthenticatedContext) error {
-	type deleteOrgRequest struct {
-		ID uint `param:"orgId" validate:"required,gt=0"`
-	}
-
 	ctx := c.Request().Context()
 
-	req, err := helpers.Bind[deleteOrgRequest](c)
-	if err != nil {
-		return echo.ErrBadRequest
-	}
-
-	if c.Claims.Role != string(user.AdminRole) && c.Claims.OrganizationID == req.ID {
-		return echo.ErrUnauthorized
-	}
-
-	if err := h.organizationService.DeleteOrganization(ctx, req.ID); err != nil {
+	if err := h.organizationService.DeleteOrganization(ctx, c.Claims.OrganizationID); err != nil {
 		h.logger.WithError(err).Error("failed to delete organization")
 		return echo.ErrInternalServerError
 	}
@@ -59,7 +45,6 @@ func (h *Handlers) DeleteOrganization(c handlers.AuthenticatedContext) error {
 
 func (h *Handlers) UpdateOrganization(c handlers.AuthenticatedContext) error {
 	type updateOrgRequest struct {
-		ID   uint   `param:"orgId" validate:"required,gt=0"`
 		Name string `json:"name" validate:"required"`
 	}
 
@@ -70,11 +55,7 @@ func (h *Handlers) UpdateOrganization(c handlers.AuthenticatedContext) error {
 		return echo.ErrBadRequest
 	}
 
-	if c.Claims.Role != string(user.AdminRole) && c.Claims.OrganizationID == req.ID {
-		return echo.ErrUnauthorized
-	}
-
-	if err := h.organizationService.UpdateOrganization(ctx, req.ID, req.Name); err != nil {
+	if err := h.organizationService.UpdateOrganization(ctx, c.Claims.OrganizationID, req.Name); err != nil {
 		h.logger.WithError(err).Error("failed to update organization")
 		return echo.ErrInternalServerError
 	}
