# internal/rest/controllers/routes.go
@@ -64,22 +64,20 @@ func Register(
 	e.POST("/signup", h.Signup)
 
 	// Users
-	userGroup := e.Group("/user", authGuard, userGuard)
-	userGroup.DELETE("/:userId", authHandler(h.DeleteUser))
-	userGroup.GET("/:userId/invites", authHandler(h.GetUserInvites))
-	userGroup.POST("/:userId/invite/:inviteId/", authHandler(h.RespondToInvite))
+	e.DELETE("/user", authHandler(h.DeleteUser), authGuard, userGuard)
+	e.GET("/user/invites", authHandler(h.GetUserInvites), authGuard, userGuard)
+	e.POST("/user/invites/:inviteId/", authHandler(h.RespondToInvite), authGuard, userGuard)
 
 	// Organizations
-	orgGroup := e.Group("/organization", authGuard)
-	orgGroup.GET("/:orgId/users", authHandler(h.GetUsersInOrganization), orginizationGuard)
-	orgGroup.PUT("/:orgId", authHandler(h.UpdateOrganization), orginizationGuard, adminGuard)
-	orgGroup.DELETE("/:orgId", authHandler(h.DeleteOrganization), orginizationGuard, adminGuard)
-	orgGroup.POST("", authHandler(h.CreateOrganization))
-	orgGroup.POST("/:orgId/invite/", authHandler(h.InviteUsersToOrganization), orginizationGuard, adminGuard)
-	orgGroup.POST("/:orgId/user/virtual", authHandler(h.AddVirtualUserToOrganization), orginizationGuard, adminGuard)
-	orgGroup.POST("/:orgId/user/:userId/virtual/:virtualUserId", authHandler(h.TransferVirtualUserToUser), orginizationGuard, adminGuard)
-	orgGroup.DELETE("/:orgId/user/:userId", authHandler(h.RemoveUserFromOrganization), orginizationGuard, adminGuard)
-	orgGroup.PUT("/:orgId/user/:userId", authHandler(h.UpdateUserRole), orginizationGuard, adminGuard)
-	orgGroup.GET("/:orgId/top/:topX/measure/:leaderboardType", authHandler(h.GetLeaderboard), orginizationGuard)
-	orgGroup.POST("/:orgId/match", authHandler(h.PostMatch), orginizationGuard)
+	e.POST("/organization", authHandler(h.CreateOrganization), authGuard)
+	e.PUT("/organization", authHandler(h.UpdateOrganization), authGuard, orginizationGuard, adminGuard)
+	e.DELETE("/organization", authHandler(h.DeleteOrganization), authGuard, orginizationGuard, adminGuard)
+	e.GET("/organization/users", authHandler(h.GetUsersInOrganization), authGuard, orginizationGuard)
+	e.POST("/organization/invite", authHandler(h.InviteUsersToOrganization), authGuard, orginizationGuard, adminGuard)
+	e.POST("/organization/users/virtual", authHandler(h.AddVirtualUserToOrganization), authGuard, orginizationGuard, adminGuard)
+	e.POST("/organization/users/:userId/virtual/:virtualUserId", authHandler(h.TransferVirtualUserToUser), authGuard, orginizationGuard, adminGuard)
+	e.DELETE("/organization/users/:userId", authHandler(h.RemoveUserFromOrganization), authGuard, orginizationGuard, adminGuard)
+	e.PUT("/organization/users/:userId", authHandler(h.UpdateUserRole), authGuard, orginizationGuard, adminGuard)
+	e.GET("/organization/top/:topX/measures/:leaderboardType", authHandler(h.GetLeaderboard), authGuard, orginizationGuard)
+	e.POST("/organization/matches", authHandler(h.PostMatch), authGuard, orginizationGuard)
 }
